# Lardossa

./: .gitignore  CMakeLists.txt  lardossa-font-integration-prompt.md
Presets/Factory/: AQUABAHN_LEAD.xml  GRAVA_PAD.xml  LARDOSSA_FLOOD.xml  LARDOSSEN_BASS.xml  POSITRON_STAB.xml
Source/: BridgeTypes.h  FmOperator.cpp  FmOperator.h  FmVoice.cpp  FmVoice.h  Parameters.h  PatternGenerators.cpp  PatternGenerators.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  Saturators.h  SequencerTiming.cpp  SequencerTiming.h  SequencerTypes.h  SubtractiveVoice.cpp  SubtractiveVoice.h  TransportResolver.cpp  TransportResolver.h  TransportTypes.h  VoicePool.cpp  VoicePool.h  WebStepPatch.cpp  WebStepPatch.h
Tests/: CMakeLists.txt  FmVoiceTests.cpp  PresetXmlTests.cpp  VoicePoolTests.cpp
design/: LARDOSSA_DESIGN_SYSTEM.md
ui_kits/lardossa-vst/: index.html  package-lock.json  package.json  vite.config.js
ui_kits/lardossa-vst/src/: BRIDGE_SCHEMA.md  FIGMA_INTEGRATION.md  FigmaRoot.jsx  LardossaApp.jsx  PlaceholderUI.css  PlaceholderUI.jsx  bridge.js  main.jsx  tokens.css
